testsuite/tests/rename/should_fail/T12488g.stderr
T12488g.hs:4:5: error: [GHC-11592]
    • The class ‘C’ defines a child named ‘++-’,
      but it is not in the type namespace.
    • In the export: C(data (+++), type (++-))
    Suggested fixes:
      • Remove the ‘type’ keyword
      • Perhaps use ‘+++’ (Defined at T12488g.hs:9:3)

T12488g.hs:4:5: error: [GHC-11592]
    • The class ‘C’ defines a child named ‘+++’,
      but it is not in the data namespace.
    • In the export: C(data (+++), type (++-))
    Suggested fixes:
      • Remove the ‘data’ keyword
      • Perhaps use ‘++-’ (Defined at T12488g.hs:10:3)

